<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AList_03</string>
    <string name="tvListTitle_Text">List Title</string>
    <string name="tvListItemName_Text">List Item</string>
    <string name="tvListItemNote_Text">(List Note)</string>
    <string name="tvListItemSeparator_Text">Group Separator</string>
    <string name="action_removeStruckOffItems">Remove struck off items</string>
    <string name="action_addItem">Add Item</string>
    <string name="action_newList">New List</string>
    <string name="action_clearList">Clear List</string>
    <string name="action_emailList">Email List</string>
    <string name="action_editListTitle">Edit List Title</string>
    <string name="action_deleteList">Delete List</string>
    <string name="stores">Stores</string>
    <string name="action_Preferences">Preferences</string>
    <string name="action_about">About</string>
    <string name="tvStoreRow_Text">Store Row</string>
    <string name="txtMasterListItem_Text">Item Name</string>
    <string name="txtEditItemName_Hint">Item</string>
    <string name="txtEditItemNote_Hint">Note</string>
    <string name="txtEditListTitle_Hint">List Title</string>
    <string name="editItemDialogTitle">Edit Item</string>
    <string name="editListTitleDialogTitle">Edit Item</string>
    <string name="createNewListDialogTitle">Create New List</string>
    <string name="btn_apply_text">Apply</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="btn_yes_text">Yes</string>
    <string name="btn_no_text">No</string>
    <string name="btn_ok_text">OK</string>
    <string name="txtItemName_Text">Item</string>
    <string name="txtItemNote_Text">Note</string>
    <string name="btnAddToMasterList_Text">Add</string>
    <string name="tvItemGroup_Text">[Item Group]</string>
    <string name="action_newStore">New Store</string>
    <string name="action_showStoreLocation">Show store location</string>
    <string name="action_groups">Groups</string>
    <string name="action_editStoreName">Edit store name</string>
    <string name="dialog_edit_list_title">Edit List Title</string>
    <string name="dialog_new_list_title">New List Title</string>
    <string name="dialog_title_list_sort_order">List Sort Order</string>
    <string name="dialog_title_master_list_sort_order">Master List Sort Order</string>
    <string name="sort_option_alphabetical">Alphabetical</string>
    <string name="sort_option_by_group">By Group</string>
    <string name="sort_option_selected_items_at_top">Selected Items At Top</string>
    <string name="sort_option_selected_items_at_bottom">Selected Items At Bottom</string>
    <string name="sort_option_last_used">Last used</string>
    <string name="sort_option_manual">Manual</string>
    <string name="btnClearEditText_Text">CL</string>
    <string name="action_clearAllSelectedItems">Clear All Selected Items</string>
    <string name="action_cullItems">Cull or Move Items</string>
    <string name="action_deleteAllItems">Delete All Items</string>
    <string name="dialog_title_delete_all_items">Delete All Items</string>
    <string name="dialog_message_permanently_delete_all_items_in">"Permanently delete ALL items in "</string>
    <string name="list_title_groceries">Groceries</string>

    <string-array name="grocery_items">
        <item>Apples</item>
        <item>Avocado</item>
        <item>Bacon</item>
        <item>Baked Beans</item>
        <item>Balsamic Vinegar</item>
        <item>Bananas</item>
        <item>Beer</item>
        <item>Black Olives</item>
        <item>Blue Cheese</item>
        <item>Blueberries</item>
        <item>Bread</item>
        <item>Broccoli</item>
        <item>Buns</item>
        <item>Buttermilk</item>
        <item>Carrots</item>
        <item>Cereal</item>
        <item>Cheese</item>
        <item>Chicken</item>
        <item>Chicken Broth</item>
        <item>Corn</item>
        <item>Cottage Cheese</item>
        <item>Cream Cheese</item>
        <item>Distilled Water</item>
        <item>Eggs</item>
        <item>Garlic</item>
        <item>Ground Beef</item>
        <item>Hummus</item>
        <item>Kleenex</item>
        <item>Lemons</item>
        <item>Limes</item>
        <item>Manicotti Noodles</item>
        <item>Mustard</item>
        <item>Olive Oil</item>
        <item>Parmesan Cheese</item>
        <item>Peanut Butter</item>
        <item>Pickles</item>
        <item>Pineapple</item>
        <item>Potatoes</item>
        <item>Relish</item>
        <item>Sour Cream</item>
        <item>String Cheese</item>
        <item>Toilet Paper</item>
        <item>Tomatoes</item>
        <item>Toothpaste</item>
        <item>Tuna</item>
        <item>Vanilla</item>
        <item>Vinegar</item>
        <item>Wine</item>
        <item>Yogurt</item>
    </string-array>
    <string-array name="grocery_groups">
        <item>Baking Supplies</item>
        <item>Bathroom Supplies</item>
        <item>Beer</item>
        <item>Bread</item>
        <item>Breakfast</item>
        <item>Candy</item>
        <item>Canned Meats</item>
        <item>Canned Vegetables</item>
        <item>Cereals</item>
        <item>Chilled Beverages</item>
        <item>Cleaning Supplies</item>
        <item>Coffee</item>
        <item>Condiments</item>
        <item>Crackers</item>
        <item>Dairy</item>
        <item>Flour</item>
        <item>Fresh Produce</item>
        <item>Laundry Supplies</item>
        <item>Nuts</item>
        <item>Pet Supplies</item>
        <item>Snacks</item>
    </string-array>
    <string-array name="grocery_stores">
        <item>Safeway-Factoria</item>
        <item>QFC-Factoria</item>
        <item>QFC-Issaquah</item>
        <item>Albertson-Eastgate</item>
    </string-array>
    <string-array name="todo_items">
        <item>To Do Item A</item>
        <item>To Do Item B</item>
        <item>To Do Item C</item>
    </string-array>
    <string-array name="todo_groups">
        <item>Priority 1</item>
        <item>Priority 2</item>
        <item>Priority 3</item>
    </string-array>

    <string name="dialog_title_edit_item">Edit Item</string>
    <string name="dialog_title_delete_all_checked_items">Delete All Checked Items</string>
    <string name="dialog_title_move_checked_items">Move Checked Items</string>
    <string name="action_bar_title_cull_or_move_items">Cull or Move Items</string>
    <string name="tvListNormalText">List Text - Normal</string>
    <string name="tvListStrikeOutText">List Text - Strikeout</string>
    <string name="tvMasterListNotSelectedText">Master Text - Not Selected</string>
    <string name="tvMasterListSelectedText">Master Text - Selected</string>
    <string name="btnTitleBackground">Title BkGd</string>
    <string name="btnTitleText">Title Text</string>
    <string name="btnListBackground">List BkGd</string>
    <string name="btnListNormalText">List Text</string>
    <string name="btnListStrikeOutText">List SkOut</string>
    <string name="btnSeparatorBackground">Sep. BkGd</string>
    <string name="btnSeparatorText">Sep. Text</string>
    <string name="action_bar_title_select_list_colors">Select List Colors</string>
    <string name="actionBar_tab_color_presets">Color Presets</string>
    <string name="actionBar_tab_color_picker">Color Picker</string>
    <string name="btnPreset0_text">Sandy Stone</string>
    <string name="btnPreset1_text">Blue Sky</string>
    <string name="btnPreset3_text">Ralph Lauren</string>
    <string name="btnPreset4_text">Five Oranges</string>
    <string name="btnPreset5_text">Winter Road</string>
    <string name="btnPreset2_text">This Green</string>
    <string name="dialog_title_colors_applied">Colors Applied</string>

</resources>