<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_newStore"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_newStore"/>
    <item
        android:id="@+id/action_showStoreLocation"
        android:icon="@drawable/ic_action_location_found"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/action_showStoreLocation"/>
    <item
        android:id="@+id/action_editStoreName"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/action_editStoreName"/>

</menu>