<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMasterListRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lt_grey"
    android:baselineAligned="false"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dp" >

    <LinearLayout
        android:id="@+id/llItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtItemName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_black_stroke"
                android:hint="@string/txtItemName_Text"
                android:inputType="textAutoCorrect|textCapWords"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingRight="4dp"
                android:paddingTop="6dp" />

            <EditText
                android:id="@+id/txtItemNote"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_black_stroke"
                android:hint="@string/txtItemNote_Text"
                android:inputType="textAutoCorrect"
                android:paddingBottom="4dp"
                android:paddingLeft="6dp"
                android:paddingRight="4dp"
                android:paddingTop="6dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddToMasterList"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/btnAddToMasterList_Text" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvItemsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:maxLines="1" >
    </ListView>

</LinearLayout>