<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMasterListItemRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp" >

    <include layout="@layout/list_items_separator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:padding="1dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:padding="1dp" >

            <CheckBox
                android:id="@+id/ckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvItemName"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:text="@string/tvListItemName_Text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItemNote"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingLeft="4dp"
                android:singleLine="true"
                android:text="@string/tvListItemNote_Text" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvItemGroup"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:singleLine="true"
            android:text="@string/tvItemGroup_Text" />
    </LinearLayout>

</LinearLayout>